# appoxy

./: README.md
docs/: drawio.xml  droid-server.xml  microservices.xml  pipeline.xml
dsi/: Cargo.toml  README.md  compose.yml  install.sh  requests.http
dsi/docs/: log-streaming.xml
dsi/src/: integration_tests.rs  main.rs  services.rs
dsi/src/controllers/: droid_router.rs  droids_router.rs  mod.rs  stacks_router.rs
dsi/src/models/: builder.rs  buildpack.rs  droid.rs  droid_model.rs  group.rs  mod.rs  order.rs  stack.rs
dsi/src/routers/: droids_router.rs  mod.rs  stacks_router.rs
dsi/src/utility/: buildpack.rs  mod.rs  stack.rs
legacy/: README.md  appoxy.conf  appoxy_deploy_app  configure.sh  droidnet-proxy.compose.yml  droidnet.nginx
legacy/.envfiles/: restinnclient.env
legacy/scripts_legacy/: configure_app.sh  deploy_app.sh  init_app.sh
scripts/: provision.sh
