[package]
name = "local-droidnet-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
tokio-test = "0.4.2"
toml = "0.5.9"

[dependencies.tokio]
version = "1.21.2"
features = ["process"]

[dependencies.reqwest]
version = "0.11.12"
features = ["blocking"]


[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
